--- a/face_recognition/data_collection.ipynb
+++ b/face_recognition/data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8a22feb1-bbb3-4330-a608-95665021af9a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "f8199ea0-67e7-46fd-b03d-8dbea4995763",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the name of the data:  angry\n"
+      "Enter the name of the data:  disgust\n"
      ]
     },
     {
