--- a/face_recognition/data_training.ipynb
+++ b/face_recognition/data_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "611e220d-ef47-4dec-817b-c4c479974e6a",
    "metadata": {
     "scrolled": true
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ff23a281-5b42-4832-b795-0bfb4a55f319",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "c = 0\n",
     "\n",
     "for i in os.listdir():\n",
-    "    if i.split(\".\")[-1] == \"npy\":\n",
+    "    if i.split(\".\")[-1] == \"npy\" and not(i.split(\".\")[0]==\"labels\"):\n",
     "        if not(is_init):\n",
     "            is_init = True\n",
     "            X = np.load(i)\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "4a553be4-81e6-4f4c-a93d-aff9467020a2",
    "metadata": {},
    "outputs": [
@@ -64,206 +64,114 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n",
-      "10/10 [==============================] - 1s 10ms/step - loss: 1.1162 - acc: 0.3700\n",
-      "Epoch 2/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 1.0917 - acc: 0.3467\n",
-      "Epoch 3/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 1.0816 - acc: 0.3800\n",
-      "Epoch 4/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 1.0659 - acc: 0.3833\n",
-      "Epoch 5/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 1.0165 - acc: 0.4333\n",
-      "Epoch 6/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 1.0452 - acc: 0.4367\n",
-      "Epoch 7/100\n",
-      "10/10 [==============================] - 0s 13ms/step - loss: 0.9815 - acc: 0.5200\n",
-      "Epoch 8/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.9926 - acc: 0.4733\n",
-      "Epoch 9/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 0.8977 - acc: 0.5567\n",
-      "Epoch 10/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.8740 - acc: 0.5500\n",
-      "Epoch 11/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.8941 - acc: 0.5467\n",
-      "Epoch 12/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.8488 - acc: 0.5633\n",
-      "Epoch 13/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.7859 - acc: 0.6400\n",
-      "Epoch 14/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.8563 - acc: 0.6367\n",
-      "Epoch 15/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.8026 - acc: 0.5900\n",
-      "Epoch 16/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.7056 - acc: 0.6900\n",
-      "Epoch 17/100\n",
-      "10/10 [==============================] - 0s 12ms/step - loss: 0.7691 - acc: 0.5833\n",
-      "Epoch 18/100\n",
-      "10/10 [==============================] - 0s 13ms/step - loss: 0.7146 - acc: 0.6567\n",
-      "Epoch 19/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 0.7085 - acc: 0.6667\n",
-      "Epoch 20/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.7131 - acc: 0.6333\n",
-      "Epoch 21/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.7227 - acc: 0.6567\n",
-      "Epoch 22/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6904 - acc: 0.6533\n",
-      "Epoch 23/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6965 - acc: 0.7000\n",
-      "Epoch 24/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6664 - acc: 0.6367\n",
-      "Epoch 25/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6292 - acc: 0.6433\n",
-      "Epoch 26/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6426 - acc: 0.6533\n",
-      "Epoch 27/100\n",
-      "10/10 [==============================] - 0s 13ms/step - loss: 0.6953 - acc: 0.6533\n",
-      "Epoch 28/100\n",
-      "10/10 [==============================] - 0s 18ms/step - loss: 0.6262 - acc: 0.6700\n",
-      "Epoch 29/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.7075 - acc: 0.6100\n",
-      "Epoch 30/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6034 - acc: 0.6533\n",
-      "Epoch 31/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6307 - acc: 0.6667\n",
-      "Epoch 32/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6120 - acc: 0.6633\n",
-      "Epoch 33/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.6098 - acc: 0.6833\n",
-      "Epoch 34/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6001 - acc: 0.6767\n",
-      "Epoch 35/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5532 - acc: 0.7100\n",
-      "Epoch 36/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6750 - acc: 0.6067\n",
-      "Epoch 37/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6382 - acc: 0.6633\n",
-      "Epoch 38/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5264 - acc: 0.7067\n",
-      "Epoch 39/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5213 - acc: 0.6933\n",
-      "Epoch 40/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 0.5578 - acc: 0.6667\n",
-      "Epoch 41/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.7321 - acc: 0.6400\n",
-      "Epoch 42/100\n",
-      "10/10 [==============================] - 0s 11ms/step - loss: 0.4730 - acc: 0.7633\n",
-      "Epoch 43/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5380 - acc: 0.7200\n",
-      "Epoch 44/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5023 - acc: 0.7133\n",
-      "Epoch 45/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6513 - acc: 0.7033\n",
-      "Epoch 46/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5371 - acc: 0.7067\n",
-      "Epoch 47/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5692 - acc: 0.6967\n",
-      "Epoch 48/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5687 - acc: 0.6900\n",
-      "Epoch 49/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5330 - acc: 0.7433\n",
-      "Epoch 50/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.7033 - acc: 0.6333\n",
-      "Epoch 51/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4673 - acc: 0.7500\n",
-      "Epoch 52/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 0.4684 - acc: 0.7600\n",
-      "Epoch 53/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6631 - acc: 0.6800\n",
-      "Epoch 54/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4896 - acc: 0.7167\n",
-      "Epoch 55/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.5787 - acc: 0.6867\n",
-      "Epoch 56/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4516 - acc: 0.7667\n",
-      "Epoch 57/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5711 - acc: 0.7033\n",
-      "Epoch 58/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4741 - acc: 0.7300\n",
-      "Epoch 59/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4424 - acc: 0.7600\n",
-      "Epoch 60/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6424 - acc: 0.7067\n",
-      "Epoch 61/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5082 - acc: 0.7900\n",
-      "Epoch 62/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4641 - acc: 0.7600\n",
-      "Epoch 63/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.5726 - acc: 0.6933\n",
-      "Epoch 64/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4568 - acc: 0.7633\n",
-      "Epoch 65/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5819 - acc: 0.7033\n",
-      "Epoch 66/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.4435 - acc: 0.7733\n",
-      "Epoch 67/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4282 - acc: 0.7933\n",
-      "Epoch 68/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6139 - acc: 0.7100\n",
-      "Epoch 69/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.4318 - acc: 0.7700\n",
-      "Epoch 70/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.5972 - acc: 0.7033\n",
-      "Epoch 71/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3933 - acc: 0.7900\n",
-      "Epoch 72/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4389 - acc: 0.7533\n",
-      "Epoch 73/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4051 - acc: 0.8000\n",
-      "Epoch 74/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.4187 - acc: 0.8000\n",
-      "Epoch 75/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.6455 - acc: 0.7367\n",
-      "Epoch 76/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4113 - acc: 0.7700\n",
-      "Epoch 77/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4065 - acc: 0.7900\n",
-      "Epoch 78/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.5166 - acc: 0.7467\n",
-      "Epoch 79/100\n",
-      "10/10 [==============================] - 0s 6ms/step - loss: 0.4947 - acc: 0.7133\n",
-      "Epoch 80/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3888 - acc: 0.8200\n",
-      "Epoch 81/100\n",
-      "10/10 [==============================] - 0s 10ms/step - loss: 0.5944 - acc: 0.7533\n",
-      "Epoch 82/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.3926 - acc: 0.7900\n",
-      "Epoch 83/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.3897 - acc: 0.7867\n",
-      "Epoch 84/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5362 - acc: 0.7533\n",
-      "Epoch 85/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.3980 - acc: 0.8167\n",
-      "Epoch 86/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.4618 - acc: 0.7700\n",
-      "Epoch 87/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4165 - acc: 0.7833\n",
-      "Epoch 88/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4166 - acc: 0.7600\n",
-      "Epoch 89/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3898 - acc: 0.8200\n",
-      "Epoch 90/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.5434 - acc: 0.7767\n",
-      "Epoch 91/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3634 - acc: 0.8933\n",
-      "Epoch 92/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.3950 - acc: 0.7933\n",
-      "Epoch 93/100\n",
-      "10/10 [==============================] - 0s 9ms/step - loss: 0.6143 - acc: 0.7733\n",
-      "Epoch 94/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3708 - acc: 0.8433\n",
-      "Epoch 95/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3564 - acc: 0.8800\n",
-      "Epoch 96/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4370 - acc: 0.7933\n",
-      "Epoch 97/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4360 - acc: 0.8200\n",
-      "Epoch 98/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.3898 - acc: 0.8100\n",
-      "Epoch 99/100\n",
-      "10/10 [==============================] - 0s 8ms/step - loss: 0.4256 - acc: 0.7867\n",
-      "Epoch 100/100\n",
-      "10/10 [==============================] - 0s 7ms/step - loss: 0.4430 - acc: 0.8033\n"
+      "{'angry': 0, 'bored': 1, 'calm': 2, 'disgust': 3, 'happy': 4, 'indifferent': 5, 'joyful': 6, 'nervous': 7, 'sad': 8, 'surprise': 9}\n",
+      "[[0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]]\n",
+      "Epoch 1/50\n",
+      "32/32 [==============================] - 2s 10ms/step - loss: 2.2156 - acc: 0.1960\n",
+      "Epoch 2/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 1.7486 - acc: 0.4210\n",
+      "Epoch 3/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 1.2635 - acc: 0.6220\n",
+      "Epoch 4/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.9273 - acc: 0.7470\n",
+      "Epoch 5/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.7297 - acc: 0.8010\n",
+      "Epoch 6/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.5855 - acc: 0.8370\n",
+      "Epoch 7/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.4713 - acc: 0.8950\n",
+      "Epoch 8/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.4313 - acc: 0.8950\n",
+      "Epoch 9/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3768 - acc: 0.9120\n",
+      "Epoch 10/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3550 - acc: 0.9160\n",
+      "Epoch 11/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3262 - acc: 0.9090\n",
+      "Epoch 12/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3082 - acc: 0.9140\n",
+      "Epoch 13/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2917 - acc: 0.9290\n",
+      "Epoch 14/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2463 - acc: 0.9420\n",
+      "Epoch 15/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2913 - acc: 0.9290\n",
+      "Epoch 16/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2318 - acc: 0.9480\n",
+      "Epoch 17/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2357 - acc: 0.9430\n",
+      "Epoch 18/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2137 - acc: 0.9470\n",
+      "Epoch 19/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.2090 - acc: 0.9440\n",
+      "Epoch 20/50\n",
+      "32/32 [==============================] - 0s 9ms/step - loss: 0.2358 - acc: 0.9430\n",
+      "Epoch 21/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2019 - acc: 0.9480\n",
+      "Epoch 22/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2133 - acc: 0.9450\n",
+      "Epoch 23/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1622 - acc: 0.9620\n",
+      "Epoch 24/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2058 - acc: 0.9370\n",
+      "Epoch 25/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1665 - acc: 0.9640\n",
+      "Epoch 26/50\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1732 - acc: 0.9530\n",
+      "Epoch 27/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1751 - acc: 0.9580\n",
+      "Epoch 28/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1698 - acc: 0.9580\n",
+      "Epoch 29/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1510 - acc: 0.9580\n",
+      "Epoch 30/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1763 - acc: 0.9510\n",
+      "Epoch 31/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1424 - acc: 0.9620\n",
+      "Epoch 32/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1430 - acc: 0.9580\n",
+      "Epoch 33/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1970 - acc: 0.9490\n",
+      "Epoch 34/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1126 - acc: 0.9720\n",
+      "Epoch 35/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1368 - acc: 0.9620\n",
+      "Epoch 36/50\n",
+      "32/32 [==============================] - 0s 9ms/step - loss: 0.1329 - acc: 0.9660\n",
+      "Epoch 37/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1336 - acc: 0.9620\n",
+      "Epoch 38/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1191 - acc: 0.9660\n",
+      "Epoch 39/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1257 - acc: 0.9580\n",
+      "Epoch 40/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.1210 - acc: 0.9620\n",
+      "Epoch 41/50\n",
+      "32/32 [==============================] - 0s 12ms/step - loss: 0.1063 - acc: 0.9710\n",
+      "Epoch 42/50\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 0.0999 - acc: 0.9720\n",
+      "Epoch 43/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1214 - acc: 0.9660\n",
+      "Epoch 44/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1154 - acc: 0.9650\n",
+      "Epoch 45/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1173 - acc: 0.9660\n",
+      "Epoch 46/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1049 - acc: 0.9700\n",
+      "Epoch 47/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1254 - acc: 0.9620\n",
+      "Epoch 48/50\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.0854 - acc: 0.9750\n",
+      "Epoch 49/50\n",
+      "32/32 [==============================] - 0s 9ms/step - loss: 0.1114 - acc: 0.9650\n",
+      "Epoch 50/50\n",
+      "32/32 [==============================] - 0s 10ms/step - loss: 0.0850 - acc: 0.9800\n"
      ]
     }
    ],
@@ -291,7 +199,7 @@
     "\n",
     "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['acc'])\n",
     "\n",
-    "model.fit(X_new, y_new, epochs = 100)\n",
+    "model.fit(X_new, y_new, epochs = 50)\n",
     "\n",
     "model.save(\"model.h5\")\n",
     "np.save(\"labels.npy\", np.array(label))"
