--- a/face_recognition/data_training.ipynb
+++ b/face_recognition/data_training.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "611e220d-ef47-4dec-817b-c4c479974e6a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ff23a281-5b42-4832-b795-0bfb4a55f319",
    "metadata": {},
    "outputs": [],
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4a553be4-81e6-4f4c-a93d-aff9467020a2",
    "metadata": {},
    "outputs": [
@@ -64,114 +73,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'angry': 0, 'bored': 1, 'calm': 2, 'disgust': 3, 'happy': 4, 'indifferent': 5, 'joyful': 6, 'nervous': 7, 'sad': 8, 'surprise': 9}\n",
-      "[[0. 0. 0. ... 1. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 1. ... 0. 0. 0.]\n",
-      " [0. 1. 0. ... 0. 0. 0.]]\n",
+      "WARNING:tensorflow:From C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
       "Epoch 1/50\n",
-      "32/32 [==============================] - 2s 10ms/step - loss: 2.2156 - acc: 0.1960\n",
+      "WARNING:tensorflow:From C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "32/32 [==============================] - 2s 17ms/step - loss: 2.1918 - acc: 0.1710\n",
       "Epoch 2/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 1.7486 - acc: 0.4210\n",
+      "32/32 [==============================] - 0s 8ms/step - loss: 1.7401 - acc: 0.4140\n",
       "Epoch 3/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 1.2635 - acc: 0.6220\n",
+      "32/32 [==============================] - 0s 9ms/step - loss: 1.2946 - acc: 0.6260\n",
       "Epoch 4/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.9273 - acc: 0.7470\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.9674 - acc: 0.7570\n",
       "Epoch 5/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.7297 - acc: 0.8010\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.7541 - acc: 0.7970\n",
       "Epoch 6/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.5855 - acc: 0.8370\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.6017 - acc: 0.8720\n",
       "Epoch 7/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.4713 - acc: 0.8950\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.5094 - acc: 0.8770\n",
       "Epoch 8/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.4313 - acc: 0.8950\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.4180 - acc: 0.9100\n",
       "Epoch 9/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.3768 - acc: 0.9120\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.4001 - acc: 0.9030\n",
       "Epoch 10/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.3550 - acc: 0.9160\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3169 - acc: 0.9240\n",
       "Epoch 11/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.3262 - acc: 0.9090\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.3228 - acc: 0.9260\n",
       "Epoch 12/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.3082 - acc: 0.9140\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2771 - acc: 0.9350\n",
       "Epoch 13/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2917 - acc: 0.9290\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.2771 - acc: 0.9250\n",
       "Epoch 14/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2463 - acc: 0.9420\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2551 - acc: 0.9350\n",
       "Epoch 15/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2913 - acc: 0.9290\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2449 - acc: 0.9450\n",
       "Epoch 16/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2318 - acc: 0.9480\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2463 - acc: 0.9360\n",
       "Epoch 17/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.2357 - acc: 0.9430\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2293 - acc: 0.9420\n",
       "Epoch 18/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.2137 - acc: 0.9470\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2170 - acc: 0.9400\n",
       "Epoch 19/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.2090 - acc: 0.9440\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1987 - acc: 0.9510\n",
       "Epoch 20/50\n",
-      "32/32 [==============================] - 0s 9ms/step - loss: 0.2358 - acc: 0.9430\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.2055 - acc: 0.9420\n",
       "Epoch 21/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2019 - acc: 0.9480\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1814 - acc: 0.9530\n",
       "Epoch 22/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2133 - acc: 0.9450\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1847 - acc: 0.9470\n",
       "Epoch 23/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1622 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1693 - acc: 0.9600\n",
       "Epoch 24/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.2058 - acc: 0.9370\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1732 - acc: 0.9570\n",
       "Epoch 25/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1665 - acc: 0.9640\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1695 - acc: 0.9490\n",
       "Epoch 26/50\n",
-      "32/32 [==============================] - 0s 6ms/step - loss: 0.1732 - acc: 0.9530\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1622 - acc: 0.9530\n",
       "Epoch 27/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1751 - acc: 0.9580\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1643 - acc: 0.9530\n",
       "Epoch 28/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1698 - acc: 0.9580\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1081 - acc: 0.9770\n",
       "Epoch 29/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1510 - acc: 0.9580\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.1516 - acc: 0.9520\n",
       "Epoch 30/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1763 - acc: 0.9510\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1484 - acc: 0.9590\n",
       "Epoch 31/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1424 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1478 - acc: 0.9610\n",
       "Epoch 32/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1430 - acc: 0.9580\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1283 - acc: 0.9640\n",
       "Epoch 33/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1970 - acc: 0.9490\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1186 - acc: 0.9640\n",
       "Epoch 34/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1126 - acc: 0.9720\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1274 - acc: 0.9600\n",
       "Epoch 35/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1368 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1415 - acc: 0.9570\n",
       "Epoch 36/50\n",
-      "32/32 [==============================] - 0s 9ms/step - loss: 0.1329 - acc: 0.9660\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1362 - acc: 0.9580\n",
       "Epoch 37/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1336 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1098 - acc: 0.9720\n",
       "Epoch 38/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1191 - acc: 0.9660\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1225 - acc: 0.9650\n",
       "Epoch 39/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1257 - acc: 0.9580\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1144 - acc: 0.9680\n",
       "Epoch 40/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.1210 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1150 - acc: 0.9660\n",
       "Epoch 41/50\n",
-      "32/32 [==============================] - 0s 12ms/step - loss: 0.1063 - acc: 0.9710\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0777 - acc: 0.9770\n",
       "Epoch 42/50\n",
-      "32/32 [==============================] - 0s 8ms/step - loss: 0.0999 - acc: 0.9720\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1086 - acc: 0.9650\n",
       "Epoch 43/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1214 - acc: 0.9660\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.1414 - acc: 0.9580\n",
       "Epoch 44/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1154 - acc: 0.9650\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0777 - acc: 0.9800\n",
       "Epoch 45/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1173 - acc: 0.9660\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0963 - acc: 0.9640\n",
       "Epoch 46/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1049 - acc: 0.9700\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0762 - acc: 0.9790\n",
       "Epoch 47/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.1254 - acc: 0.9620\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0824 - acc: 0.9730\n",
       "Epoch 48/50\n",
-      "32/32 [==============================] - 0s 7ms/step - loss: 0.0854 - acc: 0.9750\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0819 - acc: 0.9750\n",
       "Epoch 49/50\n",
-      "32/32 [==============================] - 0s 9ms/step - loss: 0.1114 - acc: 0.9650\n",
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.0946 - acc: 0.9710\n",
       "Epoch 50/50\n",
-      "32/32 [==============================] - 0s 10ms/step - loss: 0.0850 - acc: 0.9800\n"
+      "32/32 [==============================] - 0s 7ms/step - loss: 0.0899 - acc: 0.9710\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
      ]
     }
    ],
